--- a/Tempo/Base.lproj/Main.storyboard
+++ b/Tempo/Base.lproj/Main.storyboard
@@ -32,9 +32,6 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QHk-MF-q6V">
-                                <rect key="frame" x="8" y="109" width="304" height="216"/>
-                            </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nwV-Lh-8Vi">
                                 <rect key="frame" x="8" y="496" width="304" height="56"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -49,17 +46,21 @@
                                     <segue destination="u5Z-qG-y9U" kind="presentation" identifier="toTimerViewController" id="bUn-Yc-NX8"/>
                                 </connections>
                             </button>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QHk-MF-q6V">
+                                <rect key="frame" x="8" y="176" width="304" height="216"/>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" red="0.1503540277" green="0.3509775698" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="rzC-sT-Yt4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Gvn-iK-qPF"/>
                             <constraint firstItem="rzC-sT-Yt4" firstAttribute="top" secondItem="Uee-0j-aNJ" secondAttribute="top" constant="16" id="SBQ-WC-GNZ"/>
                             <constraint firstItem="Uee-0j-aNJ" firstAttribute="trailing" secondItem="nwV-Lh-8Vi" secondAttribute="trailing" constant="8" id="XcR-cI-v6c"/>
+                            <constraint firstItem="QHk-MF-q6V" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eJu-Gp-UxH"/>
                             <constraint firstItem="nwV-Lh-8Vi" firstAttribute="leading" secondItem="Uee-0j-aNJ" secondAttribute="leading" constant="8" id="gCv-Av-B5a"/>
                             <constraint firstItem="QHk-MF-q6V" firstAttribute="leading" secondItem="Uee-0j-aNJ" secondAttribute="leading" constant="8" id="kQQ-D0-SzY"/>
                             <constraint firstItem="Uee-0j-aNJ" firstAttribute="bottom" secondItem="nwV-Lh-8Vi" secondAttribute="bottom" constant="16" id="mQb-Pc-gZ3"/>
                             <constraint firstItem="Uee-0j-aNJ" firstAttribute="trailing" secondItem="QHk-MF-q6V" secondAttribute="trailing" constant="8" id="nl0-Xw-IRr"/>
-                            <constraint firstItem="QHk-MF-q6V" firstAttribute="top" secondItem="rzC-sT-Yt4" secondAttribute="bottom" constant="32" id="yC9-Dc-fhh"/>
+                            <constraint firstItem="QHk-MF-q6V" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zEx-li-cRi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Uee-0j-aNJ"/>
                     </view>
@@ -69,7 +70,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="134" y="114"/>
+            <point key="canvasLocation" x="133.125" y="113.02816901408451"/>
         </scene>
         <!--Timer View Controller-->
         <scene sceneID="OFx-wA-S5K">
